# DbBot-SQLAlchemy

./: .gitignore  .travis.yml  BUILD.rst  README.rst  pyproject.toml  requirements.txt  setup.py
atests/: README
atests/dbbot/: command_line_arguments.robot  command_line_arguments.txt  sql_database.robot
atests/resources/: database.robot
dbbot/: __init__.py  run.py
dbbot/reader/: __init__.py  database_writer.py  robot_results_parser.py
